--- a/package.json
+++ b/package.json
@@ -3,21 +3,23 @@
   "version": "3.25.0",
   "private": true,
   "dependencies": {
-    "@googlemaps/react-wrapper": "^1.1.35",
-    "@refinedev/core": "^4.46.0",
-    "@refinedev/cli": "^2.16.20",
-    "@refinedev/mui": "^5.14.0",
-    "@refinedev/kbar": "1.3.4",
-    "@refinedev/react-hook-form": "^4.8.12",
-    "@refinedev/react-router-v6": "^4.5.4",
-    "@refinedev/react-table": "^5.6.4",
-    "@tanstack/react-table": "^8.2.6",
-    "@refinedev/simple-rest": "^5.0.0",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@mui/lab": "^5.0.0-alpha.85",
     "@mui/material": "^5.14.2",
     "@mui/x-data-grid": "^6.6.0",
+    "@refinedev/cli": "^2.16.20",
+    "@refinedev/core": "^4.46.0",
+    "@refinedev/kbar": "1.3.4",
+    "@refinedev/mui": "^5.14.0",
+    "@refinedev/react-hook-form": "^4.8.12",
+    "@refinedev/react-router-v6": "^4.5.4",
+    "@refinedev/react-table": "^5.6.4",
+    "@refinedev/simple-rest": "^5.0.0",
+    "@refinedev/supabase": "^5.7.3",
+    "@tanstack/react-table": "^8.2.6",
+    "@uiw/react-md-editor": "^3.19.5",
     "axios": "^1.6.2",
     "dayjs": "^1.10.7",
     "google-map-react": "^2.1.10",
@@ -26,12 +28,11 @@
     "i18next-xhr-backend": "^3.2.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.8.1",
+    "react-hook-form": "^7.30.0",
     "react-i18next": "^11.8.11",
     "react-input-mask": "^2.0.4",
-    "@uiw/react-md-editor": "^3.19.5",
-    "recharts": "^2.1.9",
-    "react-hook-form": "^7.30.0"
+    "react-router-dom": "^6.8.1",
+    "recharts": "^2.1.9"
   },
   "devDependencies": {
     "@types/node": "^18.16.2",
